Deleted the MyForm.h & .cpp and i created a new form named LoginForm and copy and pasted the design from MyForm to LoginForm

--- a/Point of Sale System.vcxproj.filters
+++ b/Point of Sale System.vcxproj.filters
@@ -15,13 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MyForm.cpp">
+    <ClCompile Include="LoginForm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MyForm.h">
-      <Filter>Source Files</Filter>
+    <ClInclude Include="LoginForm.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
