--- a/Point of Sale System.vcxproj
+++ b/Point of Sale System.vcxproj
@@ -124,12 +124,16 @@
   <ItemGroup>
     <ClCompile Include="Home.cpp" />
     <ClCompile Include="LoginForm.cpp" />
+    <ClCompile Include="SignupForm.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Home.h">
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="LoginForm.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
+    <ClInclude Include="SignupForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
   </ItemGroup>
@@ -139,6 +143,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SignupForm.resx">
+      <DependentUpon>SignupForm.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
