--- a/Point of Sale System.vcxproj.filters
+++ b/Point of Sale System.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="SignupForm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Shipping.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LoginForm.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SignupForm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Shipping.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
