--- a/Point of Sale System.vcxproj
+++ b/Point of Sale System.vcxproj
@@ -125,6 +125,7 @@
   <ItemGroup>
     <ClCompile Include="Home.cpp" />
     <ClCompile Include="LoginForm.cpp" />
+    <ClCompile Include="PaymentForm.cpp" />
     <ClCompile Include="Shipping.cpp" />
     <ClCompile Include="SignupForm.cpp" />
   </ItemGroup>
@@ -133,6 +134,9 @@
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="LoginForm.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
+    <ClInclude Include="PaymentForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="Shipping.h">
@@ -148,6 +152,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PaymentForm.resx">
+      <DependentUpon>PaymentForm.h</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Shipping.resx">
       <DependentUpon>Shipping.h</DependentUpon>
