--- a/Point of Sale System.vcxproj.filters
+++ b/Point of Sale System.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Shipping.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PaymentForm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LoginForm.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Shipping.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PaymentForm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
