--- a/Point of Sale System.vcxproj.filters
+++ b/Point of Sale System.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="PaymentForm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PaymentSuccessForm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LoginForm.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PaymentForm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PaymentSuccessForm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
