--- a/Point of Sale System.vcxproj
+++ b/Point of Sale System.vcxproj
@@ -125,6 +125,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CheckoutForm.cpp" />
     <ClCompile Include="GcashForm.cpp" />
     <ClCompile Include="Home.cpp" />
     <ClCompile Include="LoginForm.cpp" />
@@ -134,6 +135,9 @@
     <ClCompile Include="SignupForm.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CheckoutForm.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="GcashForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
@@ -157,6 +161,9 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="CheckoutForm.resx">
+      <DependentUpon>CheckoutForm.h</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GcashForm.resx">
       <DependentUpon>GcashForm.h</DependentUpon>
     </EmbeddedResource>
