--- a/Point of Sale System.vcxproj
+++ b/Point of Sale System.vcxproj
@@ -125,6 +125,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BookDetailForm.cpp" />
     <ClCompile Include="CheckoutForm.cpp" />
     <ClCompile Include="GcashForm.cpp" />
     <ClCompile Include="Home.cpp" />
@@ -135,6 +136,9 @@
     <ClCompile Include="SignupForm.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BookDetailForm.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="CheckoutForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
@@ -161,6 +165,9 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="BookDetailForm.resx">
+      <DependentUpon>BookDetailForm.h</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CheckoutForm.resx">
       <DependentUpon>CheckoutForm.h</DependentUpon>
     </EmbeddedResource>
